<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llSortChangePopup"
    android:layout_width="wrap_content"
    android:layout_height="350dp"
    android:background="@drawable/spellbook_border"
    android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/osrsBrown"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginRight="6dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="@color/osrsOrange"
            android:text="@string/prompt_select_columns"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/name_favorite_column"
            android:buttonTint="@color/osrsLightGreen"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/osrsLightBrown"
            android:checked="true"/>

        <!-- Hide Item checkbox since it should always been displayed -->
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/name_item_column"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:background="@color/osrsLightBrown"
            android:buttonTint="@color/osrsLightGreen"
            android:checked="true"
            android:visibility="gone" />

        <CheckBox
            android:buttonTint="@color/osrsLightGreen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/osrsBrown"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/name_alch_column"/>

        <CheckBox
            android:buttonTint="@color/osrsLightGreen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/osrsLightBrown"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/name_price_column"/>

        <CheckBox
            android:buttonTint="@color/osrsLightGreen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/osrsBrown"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/name_profit_column"/>

        <CheckBox
            android:buttonTint="@color/osrsLightGreen"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/osrsLightBrown"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:text="@string/name_limit_column"/>

        <Switch
            android:id="@+id/swShowHiddenItems"
            android:thumbTint="@color/osrsLightGreen"
            android:trackTint="@color/osrsCharcoal"
            android:checked="false"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="10dp"
            android:background="@color/osrsBrown"
            android:layout_gravity="bottom"
            android:textColor="@color/osrsOrange"
            android:text="@string/label_sw_show_hidden_items" />

</LinearLayout>